k8s/06-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: notes-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: slxvkvel/auth-service:1.1  
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: notes-manager
spec:
  selector:
    app: auth-service
  ports:
  - port: 8080
    targetPort: 8080
