k8s/07-notes-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-service
  namespace: notes-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-service
  template:
    metadata:
      labels:
        app: notes-service
    spec:
      containers:
      - name: notes-service
        image: slxvkvel/notes-service:1.1  
        imagePullPolicy: Always 
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: notes-service
  namespace: notes-manager
spec:
  selector:
    app: notes-service
  ports:
  - port: 8081
    targetPort: 8081
