k8s/08-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: notes-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: slxvkvel/frontend:1.1  
        imagePullPolicy: Always  
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: notes-manager
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
